force-app/main/default/objects/mcdm_15__SubmissionP13n__c/fields/mcdm_15__Bulk_Send_Job__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Bulk_Send_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bulk Send Job</label>
    <referenceTo>mcdm_15__Bulk_Send_Job__c</referenceTo>
    <relationshipLabel>MCDM Submission P13ns</relationshipLabel>
    <relationshipName>MCDM_Submission_P13ns</relationshipName>
    <type>Lookup</type>
</CustomField>