force-app/main/default/objects/mcdm_15__SubmissionP13n__c/fields/mcdm_15__P13nJson__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__P13nJson__c</fullName>
    <defaultValue>&quot;{}&quot;</defaultValue>
    <label>P13n Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>